Failure to generate compiler stubs from compiler thread should not crash VM when compilation disabled due to full CodeCache

XMLWordPrintable

    • b11

      #
      # There is insufficient memory for the Java Runtime Environment to continue.
      # Native memory allocation (malloc) failed to allocate 70000 bytes. Error detail: CodeCache: no room for StubRoutines (compiler stubs)
      # Possible reasons:
      # The system is out of physical RAM or swap space
      # This process is running with CompressedOops enabled, and the Java Heap may be blocking the growth of the native heap
      # Possible solutions:
      # Reduce memory load on the system
      # Increase physical memory or swap space
      # Check if swap backing store is full
      # Decrease Java heap size (-Xmx/-Xms)
      # Decrease number of Java threads
      # Decrease Java thread stack sizes (-Xss)
      # Set larger code cache with -XX:ReservedCodeCacheSize=
      # JVM is running with Zero Based Compressed Oops mode in which the Java heap is
      # placed in the first 32GB address space. The Java Heap base address is the
      # maximum limit for the native heap growth. Please use -XX:HeapBaseMinAddress
      # to set the Java Heap base and to place the Java Heap above 32GB virtual address.
      # This output file may be truncated or incomplete.
      #
      # Out of Memory Error (stubRoutines.cpp:184), pid=45192, tid=28419
      #
      # JRE version: Java(TM) SE Runtime Environment (26.0+10) (build 26-ea+10-950)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (26-ea+10-950, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, bsd-aarch64)
      # Core dump will be written. Default location: core.45192
      #

      --------------- S U M M A R Y ------------

      Command Line: -XX:InitialCodeCacheSize=873K -XX:ReservedCodeCacheSize=995k

      Host: "Mac14,3" arm64, 8 cores, 16G, Darwin 22.3.0, macOS 13.2.1 (22D68)
      Time: Fri Aug 1 20:45:14 2025 GMT elapsed time: 0.012417 seconds (0d 0h 0m 0s)

      --------------- T H R E A D ---------------

      Current thread (0x000000012582fa00): JavaThread "C2 CompilerThread0" daemon [_thread_in_vm, id=28419, stack(0x000000016d180000,0x000000016d383000) (2060K)]

      Stack: [0x000000016d180000,0x000000016d383000], sp=0x000000016d382220, free space=2056k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.dylib+0xa8559c] VMError::report(outputStream*, bool)+0x944 (stubRoutines.cpp:184)
      V [libjvm.dylib+0xa8901c] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void const*, void const*, char const*, int, unsigned long)+0x518
      V [libjvm.dylib+0xa89824] VMError::show_message_box(char*, int)+0x0
      V [libjvm.dylib+0x306714] report_should_not_call(char const*, int)+0x0
      V [libjvm.dylib+0x9ae838] StubRoutines::initialize_initial_stubs()+0x0
      V [libjvm.dylib+0x9aebc8] compiler_stubs_init(bool)+0xb0
      V [libjvm.dylib+0x201a98] C2Compiler::initialize()+0x7c
      V [libjvm.dylib+0x2c7528] CompileBroker::init_compiler_runtime()+0xd0
      V [libjvm.dylib+0x2c7e38] CompileBroker::compiler_thread_loop()+0x218
      V [libjvm.dylib+0x4e9808] JavaThread::thread_main_inner()+0xa8
      V [libjvm.dylib+0xa0cefc] Thread::call_run()+0xc8
      V [libjvm.dylib+0x87afec] thread_native_entry(Thread*)+0x118
      C [libsystem_pthread.dylib+0x706c] _pthread_start+0x94
      Lock stack of current Java thread (top to bottom):

            Assignee:
            Andrew Dinn
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: