8364558: Failure to generate compiler stubs from compiler thread should not crash VM when compilation disabled due to full CodeCache

Reviewed-by: kvn, shade